# cpp-crud-gen-dsl

./: CMakeLists.txt  LICENSE  README.md  swmanager.cpp  swmanager.h
app/: bwreportaction.cpp  bwreportaction.h
custom/: swmsale.cpp  swmsale.h
install/etc/: swm.conf  swm.db
install/etc/fieldtypes/: CheckBoxList.fft  Date.fft  DatePeriod.fft  InputToList.fft  ListToList.fft  RadioList.fft  ReadOnly.fft  SelectList.fft  TextArea.fft  Time.fft  TimePeriod.fft  raw.fft  text.fft
install/etc/fieldtypes/old/: Date.fft  DatePeriod.fft  IP.fft  IPMask.fft  InputToList.fft  InputToTwoLists.fft  IpMaskToList.fft  IpToList.fft  ListToList.fft  ListToTwoLists.fft  SelectOtherInt.fft  Time.fft  TimePeriod.fft  TwoInputToTwoLists.fft  hidden.fft  multiselect.fft  passwordCad.fft  select.fft  singleselect.fft  text.fft
install/etc/manager/records/: corporateclient.conf  individualcustomer.conf  license.conf  price.conf  seller.conf  software.conf
install/etc/manager/reports/: clientes.conf  emit.conf  estoque.conf  precos.conf  report.conf  swm_clientes_cadastrados.jasper  swm_estoque.jasper  swm_precos.jasper  swm_venda.jasper  swm_vendidos_mes.jasper  vendas.conf  vendidos.conf
install/etc/manager/sales/: seller.conf
install/var/db/: swm.db
install/var/www/html/cgi-bin/: swm.cgi  swmsale.cgi  uc.cgi
install/var/www/html/css/: navbar.css  signin.css
install/var/www/html/js/: bwcadmin.js  bwclogin.js  bwcmanager.js
install/var/www/html/templates/: alert.html  body.html  button.html  div.html  error.html  footer.html  form.html  form_chpass.html  form_login.html  header.html  modal.html  modal_static.html  navbar.html  navbar_dropdown.html  navbar_header.html  navbar_item.html  navbar_list.html  panel.html  scripts.html  success.html  table.html  welcome.html  welcome1.html
libs/cgi/: bwaccessprofile.cpp  bwaccessprofile.h  bwajaxdbhtmlform.cpp  bwajaxdbhtmlform.h  bwajaxdbhtmltable.cpp  bwajaxdbhtmltable.h  bwajaxhtmlform.cpp  bwajaxhtmlform.h  bwajaxhtmltable.cpp  bwajaxhtmltable.h  bwajaxregcontainer.cpp  bwajaxregcontainer.h  bwdbhtmlform.cpp  bwdbhtmlform.h  bwdbhtmlformtest.cpp  bwdbhtmltable.cpp  bwdbhtmltable.h  bwformaction.cpp  bwformaction.h  bwformactionfactory.cpp  bwformactionfactory.h  bwhtmlform.cpp  bwhtmlform.h  bwhtmlnav.cpp  bwhtmlnav.h  bwhtmltable.cpp  bwhtmltable.h  bwregcontainer.cpp  bwregcontainer.h  bwreporthtmlform.cpp  bwreporthtmlform.h
libs/database/: bwdatabase.cpp  bwdatabase.h  bwdb.cpp  bwdb.h  bwdbpgsql.cpp  bwdbpgsql.h  bwdbregistry.cpp  bwdbregistry.h  bwdbrelation.cpp  bwdbrelation.h  bwdbsqlite.cpp  bwdbsqlite.h  bwresultset.cpp  bwresultset.h
libs/database/linux/: bwdbload.cpp  bwdbload.h
libs/database/win32/: bwdbload.cpp  bwdbload.h
libs/http/: bwform.cpp  bwform.h  bwhttp.cpp  bwhttp.h  bwhttprequest.cpp  bwhttprequest.h  bwhttpresponse.cpp  bwhttpresponse.h
libs/utils/: .bwurl.cpp.swp  bwabstractthread.cpp  bwabstractthread.h  bwconfig.cpp  bwconfig.h  bwerror.cpp  bwerror.h  bwhash.cpp  bwhash.h  bwhashmd5.cpp  bwhashmd5.h  bwkeylist.cpp  bwkeylist.h  bwkeypair.cpp  bwkeypair.h  bwlicensemanager.cpp  bwlicensemanager.h  bwlist.cpp  bwlist.h  bwlog.cpp  bwlog.h  bwmailer.cpp  bwmailer.h  bwmime.cpp  bwmime.h  bwprimlist.cpp  bwprimlist.h  bwprimstring.cpp  bwprimstring.h  bwstring.cpp  bwstring.h  bwtemplate.cpp  bwtemplate.h  bwupdater.cpp  bwupdater.h  bwurl.cpp  bwurl.h  bwurlhandler.cpp  bwurlhandler.h  bwurlmail.cpp  (+7 more)
libs/utils/linux/: bwmutex.cpp  bwmutex.h  bwthread.cpp  bwthread.h
libs/utils/win32/: bwmutex.cpp  bwmutex.h  bwthread.cpp  bwthread.h
(+1 files in other folders)
